# my_first_PINN

./: README.html  README.md  pyproject.toml
scripts/: oscillator.py
