[tool.poetry]
name = "harmonic oscilattor via pinn"
version = "0.1.0"
description = "Retrieving the harmonic oscillator solution via PINN"
authors = ["Davide Motta <davide.motta@luxottica.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
torch = "^2.1.1"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
plotly = "^5.18.0"
seaborn = "^0.13.0"
ipykernel = "^6.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
